Update and rename 2018-09-15-vocabulary-bfgs.md to 2018-09-15-bfgs.md

--- a/_posts/2018-09-15-bfgs.md
+++ b/_posts/2018-09-15-bfgs.md
@@ -3,11 +3,13 @@ title: "BFGS"
 excerpt_separator: "<!--more-->"
 layout: post
 categories:
-  - Vocabulary
+  - Maths
 tags:
   - approximation
   - bfgs
   - vocabulary
+  - py
+  - r 
 ---
 
 
